--- a/templates/base.html
+++ b/templates/base.html
@@ -138,7 +138,7 @@
 
     <!--footer-->
     <footer class="footer bg-dark text-white">
-        <div class="container" style="padding-top:20px;">
+        <div class="container" style="padding-top:30px; margin-top:180px;">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <h5>About Us</h5>
