Added recommendation page

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,11 @@
     <a href="main" class="btn btn-primary btn-lg">Go To Main Page</a>
   </div>
 
+    <!-- Go To Personal Page Button -->
+    <div class="text-center mt-5">
+      <a href="personal_recommendations" class="btn btn-primary btn-lg">Personal Recommendation</a>
+    </div>
+
   {% if signup_message %}
     <h5 style="margin-left:39%;margin-top:10px; font-weight: bold;">{{signup_message}}</h5>
   {% endif %}
