--- a/templates/base.html
+++ b/templates/base.html
@@ -142,7 +142,7 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <h5>About Us</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla pretium risus quis urna maximus, eget vestibulum risus vestibulum.</p>
+                    <p>EchoMart is a cutting-edge e-commerce platform dedicated to providing personalized shopping experiences through the power of AI. Our platform ensures real-time insights and recommendations tailored to every user's needs.</p>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <h5>Quick Links</h5>
