--- a/templates/base.html
+++ b/templates/base.html
@@ -185,5 +185,9 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="../static/js/base.js"></script>
+
+
+  <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+  <script src="https://files.bpcontent.cloud/2024/10/28/15/20241028155622-AVYBNMZE.js"></script>  
 </body>
 </html>
