Updated recommendation and integrated front-end and back-end

--- a/Angular17-Ecommerce-master/src/components/products-parent/products-parent.component.html
+++ b/Angular17-Ecommerce-master/src/components/products-parent/products-parent.component.html
@@ -9,8 +9,8 @@
 <!-- child -->
 <app-products [listFilterValueInchild]="listFilterValue"
   (addPrdsEvent)="addFunc($event)"></app-products>
-<caption>Cart</caption>
-<table class="table table-dark table-striped">
+<!--<caption>Cart</caption>-->
+<!-- <table class="table table-dark table-striped">
   <thead>
     <tr>
       <th scope="col">Name</th>
@@ -35,4 +35,4 @@
     }
 
   </tbody>
-</table>
+</table> -->
