--- a/Angular17-Ecommerce-master/src/components/products/products.component.html
+++ b/Angular17-Ecommerce-master/src/components/products/products.component.html
@@ -12,8 +12,8 @@
   </header>
 
   <!-- First Row [ProDucts]-->
-  <h2 class="font-weight-bold mb-2">From the Shop</h2>
-  <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit </p>
+  <!-- <h2 class="font-weight-bold mb-2">From the Shop</h2>
+  <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit </p> --> 
   <!-- <select
     class="form-select form-select-lg shadow-none bg-light border-0 w-25 mb-5"
     [(ngModel)]="listFilterValue">
