--- a/Angular17-Ecommerce-master/src/components/header/header.component.html
+++ b/Angular17-Ecommerce-master/src/components/header/header.component.html
@@ -57,7 +57,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link mx-2 text-uppercase"
-            [routerLink]="['/products']" routerLinkActive="active">Recommendations</a>
+            [routerLink]="['/recommended_product']" routerLinkActive="active">Recommendations</a>
         </li>
         <li class="nav-item">
           <a class="nav-link mx-2 text-uppercase"
