--- a/templates/base.html
+++ b/templates/base.html
@@ -187,7 +187,11 @@
   <script src="../static/js/base.js"></script>
 
 
+  <!-- <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+  <script src="https://files.bpcontent.cloud/2024/10/28/15/20241028155622-AVYBNMZE.js"></script>    -->
+
   <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
-  <script src="https://files.bpcontent.cloud/2024/10/28/15/20241028155622-AVYBNMZE.js"></script>   
+  <script src="https://files.bpcontent.cloud/2024/10/28/15/20241028155622-AVYBNMZE.js"></script>
+        
 </body>
 </html>
