Integrated chatbot with frontend

--- a/Angular17-Ecommerce-master/src/components/products/products.component.html
+++ b/Angular17-Ecommerce-master/src/components/products/products.component.html
@@ -5,9 +5,7 @@
     <h1 class="display-4 font-weight-bold">Products</h1>
     <p class="font-italic text-muted mb-0">An awesome Products
       collection with variant content.</p>
-    <p class="font-italic text-muted">GEAR SHOP <a
-        href="#" class="text-muted">
-        <u>GEAR SHOP </u></a>
+    <p class="font-italic text-muted">Explore Products
     </p>
   </header>
 
@@ -73,7 +71,7 @@
           }
           <ul class="list-inline small">
             <li class="list-inline-item m-0"><i
-                class="fa fa-star text-success"></i>{{item.Quantity}}</li>
+                class="fa fa-star text-success"></i></li>
             <li class="list-inline-item m-0"><i
                 class="fa fa-star text-success"></i></li>
             <li class="list-inline-item m-0"><i
