--- a/Angular17-Ecommerce-master/src/app/app.component.html
+++ b/Angular17-Ecommerce-master/src/app/app.component.html
@@ -4,4 +4,5 @@
 <app-footer></app-footer> -->
 <app-header></app-header>
 <router-outlet></router-outlet>
+<app-chatbot></app-chatbot>
 <app-footer></app-footer>
