--- a/Angular17-Ecommerce-master/src/components/aboutus/aboutus.component.html
+++ b/Angular17-Ecommerce-master/src/components/aboutus/aboutus.component.html
@@ -10,9 +10,7 @@
         <div class="row justify-content-xl-center">
           <div class="col-12 col-xl-10">
             <h2 class="h1 mb-3">Why Choose Us?</h2>
-            <p class="lead fs-4 mb-3 mb-xl-5">With years of experience and deep
-              industry knowledge, we have a proven track record of success and
-              are constantly pushing ourselves to stay ahead of the curve.</p>
+            <p class="lead fs-4 mb-3 mb-xl-5">EchoMart combines ML-driven recommendations, an intuitive interface, and real-time insights to deliver a seamless and personalized shopping experience, making it the go-to platform for users and retailers alike.</p>
             <div class="d-flex align-items-center mb-3">
               <div class="me-3 text-primary">
                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28"
