--- a/Angular17-Ecommerce-master/src/components/user-auth/user-auth.component.html
+++ b/Angular17-Ecommerce-master/src/components/user-auth/user-auth.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-6 text-center mb-5">
-        <h2 class="heading-section">Welcome to GEAR SHOP</h2>
+        <h2 class="heading-section">Welcome to EchoMart</h2>
       </div>
     </div>
     <div class="row justify-content-center">
